--- a/Description.props
+++ b/Description.props
@@ -26,10 +26,10 @@ License=GPLv3
 Description=The BANG file is a multidimensional structure of the grid file type.<br/>It organizes the value space surrounding the data values, instead of comparing the data values themselves.<br/>Its tree structured directory partitions the data space into block regions with successive binary divisions on dimensions.<br/>The clustering algorithm identifies densely populated regions as cluster centers and expands those with neighboring blocks.<br/><br/>Inserted data has to be normalized to an interval [0, 1].
 
 # Package URL for obtaining the package archive (required)
-PackageURL=http://somewhere.net/weka/funkyPackage.zip?download
+PackageURL=https://github.com/fritziF/BANGFile-WekaPackage
 
 # URL for further information
-#URL=
+URL=https://github.com/fritziF/BANGFile-WekaPackage
 
 # Dependencies (format: packageName (equality/inequality version_number)
 Depends=weka (>=3.7.1)
